--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,1 +1,10 @@
-
+<table>
+    <tr>
+        <td><a href=".">Home</a></td>
+        <td><a href="study">Test Prep</a></td>
+        <td><a href="project_doc">Project Documentation</a></td>
+        <td><a href="ct_doc">Create Task Documentation</a></td>
+        <td><a href="team_doc">Scrum Team Documentation</a></td>
+    </tr>
+</table>
+<hr>
