--- a/_includes/repl.html
+++ b/_includes/repl.html
@@ -1,1 +1,1 @@
-<iframe frameborder=“0” width=“100%” height=“800px” src=“https://replit.com/@nadirahaddach/menupy?lite=true#main.py?”>
+<iframe frameborder=“0” width=“100%” height=“800px” src=“https://replit.com/@nadirahaddach/menupy?#main.py?”>
