--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,6 +4,7 @@
         <td><a href="study">Test Prep</a></td>
         <td><a href="project_doc">Project Documentation</a></td>
         <td><a href="ct_doc">Create Task Documentation</a></td>
+        <td><a href="final">Final Review</a></td>
     </tr>
 </table>
 <hr>
